[package]
name = "shuffle"
version = "0.4.2"
authors = ["Antidote1911 <antidote1911@gmail.com>"]
license = "MIT"
description = "🔑 Random password generator"
keywords = ["cli", "password"]
categories = ["command-line-utilities"]
homepage = "https://github.com/Antidote1911/shuffle"
repository = "https://github.com/Antidote1911/shuffle"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
question = "0.2.2"
# shuffle_core = "1.0.3"
# shuffle_core = { git = "https://github.com/Antidote1911/shuffle_core", branch = "master" }
# shuffle_core = { path = "../shuffle_core" }
shuffle_core = { path = "../shuffle_core" }


[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

