[package]
name = "shuffle_core"
version = "0.4.0"
edition = "2021"
authors = ["Fabrice Corraire <antidote1911@gmail.com>"]
description = "🔑 random password generator"
repository = "https://github.com/Antidote1911/shuffle"
homepage = "https://github.com/Antidote1911/shuffle"
readme = "README.md"
keywords = ["password", "generator", "security"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT"

[dependencies]
rand = "0.9"
rand_seeder = "0.4.0"
rand_isaac = "0.4.0"
rand_hc = "0.4.0"

[lib]
name="shuffle_core"
path="src/lib.rs"
